# nist-1500-examples

./: pyproject.toml
scripts/: extract-precincts.py  extractor.py  index.py  selection.py  utility.py
test_cases/: april_precinct_1_test_case.json  april_precinct_2_test_case.json  april_precinct_3_test_case.json  april_precinct_4_test_case.json  april_test_case.json  edf_jetsons_precinct_1.json  edf_jetsons_precinct_2.json  edf_jetsons_precinct_3.json  edf_jetsons_precinct_4.json  example_2.json  june_precinct_1_test_case.json  june_precinct_2_test_case.json  june_precinct_3_test_case.json  june_precinct_4_test_case.json  june_test_case.json
