[tool.poetry]
name = "nist-1500-examples"
version = "0.0.1"
description = "NIST 1500 examples"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

"electos.nist-datamodels" = { git = "https://github.com/ion-oset/nist-data-models.git", rev = "python/main" }


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
